# Raytracing

./: CMakeLists.txt  README.md  build.sh  main.cpp
MathFunctions/: MathFunctions.h  mysqrt.cpp
Output/: file.ppm
Raytracer/: CMakeLists.txt
Raytracer/include/: CMakeLists.txt  Raytracer.h
Raytracer/include/parser/: sceneParser.h
Raytracer/include/primitives/: Primitive.h
Raytracer/include/primitives/material/: Color.h  Properties.h
Raytracer/include/primitives/objects/: Cylinder.h  Plane.h  Polygon.h  Sphere.h
Raytracer/include/raytracing/: Light.h  Observer.h  Ray.h  Scene.h  Screen.h  Vector.h
Raytracer/src/: Raytracer.cpp
Raytracer/src/parser/: sceneParser.cpp
Raytracer/src/primitives/material/: Color.cpp  Properties.cpp
Raytracer/src/primitives/objects/: Cylinder.cpp  Plane.cpp  Polygon.cpp  Sphere.cpp
Raytracer/src/raytracing/: Light.cpp  Observer.cpp  Ray.cpp  Scene.cpp  Screen.cpp
Scenes/: Sphereflake1.nff  balls.nff  balls4.nff  gears1.nff  gears4.nff  jacks3.nff  lattice4.nff  mount4.nff
src/: dependencies.h
src/Parser/: sceneParser.cpp
src/Primitives/: Primitive.cpp
src/Primitives/Material/: Color.cpp  Properties.cpp
src/Primitives/Objects/: Cylinder.cpp  Plane.cpp  Polygon.cpp  Sphere.cpp
src/RayTracing/: RayTracer.cpp
